<resources>
    <string name="app_name">AppMovil</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="your_web_client_id" translatable="false">543652738329-rf6744jrvkuu7mag90nm7c31pl4gl54b.apps.googleusercontent.com</string>
    <string name="title_activity_inicio">activity_inicio</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_menu">menu</string>
    <string name="title_activity_menuprincipal">menuprincipal</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="inicio_de_sesion">Inicio de sesion</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="log_in">Log in</string>
    <string name="log_con_google">Log con Google</string>
    <string name="olvide_mi_contrase_a">Olvide mi contraseña</string>
    <string name="registrate">Registrate</string>
    <string name="registrarse">Registrarse</string>
    <string name="listo_para_el_registro_inicia_ac">Listo para el registro? Inicia acá</string>
    <string name="nombre">Nombre</string>
    <string name="correo">Correo</string>
    <string name="correo_hotmail_com">Correo@hotmail.com</string>
    <string name="confirma_tu_contrase_a">Confirma tu contraseña</string>
    <string name="title">Error</string>
    <string name="titleAbout">Acerca de</string>
    <string name="messageFieldError">Debes completar los campos</string>
    <string name="messageRegister">Error al hacer el registro</string>
    <string name="messageAbout">Bienvenido a Tripify, tu plataforma para gestionar tus viajes de manera optima, puedes agregar clientes y programar tus proximos viajes, puedes contactarnos al siguiente correo: krenecas@gmail.com</string>
    <string name="positive_button">Aceptar</string>
    <string name="viajes"> Viajes</string>
    <string name="viajes_en_pendientes">Viajes en pendientes</string>
    <string name="destino">Destino</string>
    <string name="ubicacion">Ubicacion</string>
    <string name="origen">Origen</string>
    <string name="cliente">Cliente</string>
    <string name="fecha">Fecha</string>
    <string name="agregar">Agregar</string>
    <string name="hora">Hora</string>
    <string name="editar">Editar</string>
    <string name="guardar">Guardar</string>
    <string name="Bienveido">Bienvenido</string>
    <string name="informacion_del_viaje">Informacion del viaje</string>
    <string name="home">Home</string>
    <string name="clientes">Clientes</string>
    <string name="viaje">Viaje</string>
    <string name="apellidos">Apellidos</string>
    <string name="telefono">Telefono</string>
    <string name="Foto">Foto</string>


</resources>